second commit to master branch

--- a/masterhome/index.html
+++ b/masterhome/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Welcome to Coursera</title>
 </head>
 <body>
-	<h1>Hello Welcome to Coursera</h1>
+	<h1>Hello Welcome to Coursera. This feature is very nice</h1>
 </body>
 </html>
